# Advent-Of-Code-2023

./: README.md  aoc2023.cabal
_templates/aoc-generator/new/: cabal.ejs.t  hs.ejs.t
src/: Main.hs  ParserUtils.hs
src/Day00/: Test.hs
src/Day01/: Trebuchet.hs
src/Day02/: CubeConundrum.hs
src/Day03/: GearRatios.hs
src/Day04/: Scratchcards.hs
src/Day05/: IfYouGiveASeedAFertilizer.hs
src/Day06/: WaitForIt.hs
src/Day07/: CamelCards.hs
src/Day08/: HauntedWasteland.hs
src/Day09/: MirageMaintenance.hs
src/Day10/: PipeMaze.hs
src/Day11/: CosmicExpansion.hs
