cabal-version:       2.2

name:                aoc2023
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2023#readme
license:             Unlicense
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable aoc2023
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ParserUtils  
                     , Day07.CamelCards
                     , Day06.WaitForIt
                     , Day05.IfYouGiveASeedAFertilizer
                     , Day04.Scratchcards
                     , Day03.GearRatios
                     , Day02.CubeConundrum
                     , Day01.Trebuchet
                     , Day00.Test
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 9.0 && < 10
                     , extra
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
